--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,12 @@
         <div id="container">
             <nav>
                 <ul>
-                    <li><a href="#" class="menu_button_1"><img src="img/profile_icon.svg" alt="profile_icon"> <p>Profiel</p> </a></li>
-                    <li><a href="#" class="menu_button_2"><img src="img/cards_icon.svg" alt="cards_icon"> <p>Kaarten</p> </a></li>
-                    <li><a href="#" class="menu_button_3"><img src="img/trade_icon.svg" alt="trade_icon"> <p>Ruilplaza</p> </a></li>
-                    <li><a href="#" class="menu_button_4"><img src="img/progress_icon.svg" alt="progress_icon"> <p>Vooruitgang</p> </a></li>
-                    <li><a href="#" class="menu_button_5"><img src="img/friends_icon.svg" alt="friends_icon"> <p>Vrienden</p> </a></li>
-                    <li><a href="#" class="menu_button_6"><img src="img/logout_icon.svg" alt="logout_icon"> <p>Logout</p> </a></li>
+                    <li><a href="#" class="menu_button profile"><img src="img/profile_icon.svg" alt="profile_icon"> <p>Profiel</p> </a></li>
+                    <li><a href="#" class="menu_button cards"><img src="img/cards_icon.svg" alt="cards_icon"> <p>Kaarten</p> </a></li>
+                    <li><a href="#" class="menu_button trade"><img src="img/trade_icon.svg" alt="trade_icon"> <p>Ruilplaza</p> </a></li>
+                    <li><a href="#" class="menu_button progress"><img src="img/progress_icon.svg" alt="progress_icon"> <p>Vooruitgang</p> </a></li>
+                    <li><a href="#" class="menu_button friends"><img src="img/friends_icon.svg" alt="friends_icon"> <p>Vrienden</p> </a></li>
+                    <li><a href="#" class="menu_button logout"><img src="img/logout_icon.svg" alt="logout_icon"> <p>Logout</p> </a></li>
                 </ul>
             </nav>
         </div>
