login screen ready - icons to icons folder

--- a/www/index.html
+++ b/www/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/main_style.css">
-        <title>Blank App</title>
-    </head>
-    <body>
-        <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/transition_main.js"></script>
-        <div id="container">
-            <nav>
-                <ul>
-                    <li><a href="#" class="menu_button profile"><img src="img/profile_icon.svg" alt="profile_icon"> <p>Profiel</p> </a></li>
-                    <li><a href="#" class="menu_button cards"><img src="img/cards_icon.svg" alt="cards_icon"> <p>Kaarten</p> </a></li>
-                    <li><a href="#" class="menu_button trade"><img src="img/trade_icon.svg" alt="trade_icon"> <p>Ruilplaza</p> </a></li>
-                    <li><a href="#" class="menu_button progress"><img src="img/progress_icon.svg" alt="progress_icon"> <p>Vooruitgang</p> </a></li>
-                    <li><a href="#" class="menu_button friends"><img src="img/friends_icon.svg" alt="friends_icon"> <p>Vrienden</p> </a></li>
-                    <li><a href="#" class="menu_button logout"><img src="img/logout_icon.svg" alt="logout_icon"> <p>Logout</p> </a></li>
-                </ul>
-            </nav>
-        </div>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/main_style.css">
+    <link rel="stylesheet" type="text/css" href="css/login.css">
+    <title>Mechelini</title>
+</head>
+<body>
+
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+
+    <div id="container">
+        <img class="logo" src="img/icons/logo.svg" alt="logo">
+        <form action="">
+            <label for="username">GEBRUIKERSNAAM</label>
+            <input type="text" id="username" name="username">
+
+            <label for="password">WACHTWOORD</label>
+            <input type="text" id="password" name="password">
+
+            <input type="submit" value="INLOGGEN" class="submit">
+            <button class="register">REGISTREREN</button>
+        </form>
+    </div>
+
+</body>
 </html>
