--- a/www/profile.html
+++ b/www/profile.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <h1>Dit is een test pagina</h1>
-    <p><a href="index.html">Go back!</a></p>
+    <p><a href="home.html">Go back!</a></p>
 </body>
 </html>
