databank opgezet - werkt nog niet

--- a/www/index.html
+++ b/www/index.html
@@ -18,11 +18,11 @@
     <div id="container">
         <img class="logo" src="img/icons/logo.svg" alt="logo">
         <form action="">
-            <label for="username">GEBRUIKERSNAAM</label>
-            <input type="text" id="username" name="username">
+            <label for="username">E-MAIL</label>
+            <input type="text" id="email" name="email">
 
             <label for="password">WACHTWOORD</label>
-            <input type="text" id="password" name="password">
+            <input type="password" id="password" name="password">
 
             <input type="submit" value="INLOGGEN" class="submit">
             <button class="register">REGISTREREN</button>
