Home script terug naar versie Michiel

--- a/www/home.html
+++ b/www/home.html
@@ -14,12 +14,12 @@
         <script type="text/javascript" src="js/transition_main.js"></script>
         <nav>
                 <ul>
-                    <li><a href="#" class="menu_button profile"><img src="img/icons/profile_icon.svg" alt="profile_icon"> <p>Profiel</p> </a></li>
-                    <li><a href="#" class="menu_button cards"><img src="img/icons/cards_icon.svg" alt="cards_icon"> <p>Kaarten</p> </a></li>
-                    <li><a href="#" class="menu_button trade"><img src="img/icons/trade_icon.svg" alt="trade_icon"> <p>Ruilplaza</p> </a></li>
-                    <li><a href="#" class="menu_button progress"><img src="img/icons/progress_icon.svg" alt="progress_icon"> <p>Vooruitgang</p> </a></li>
-                    <li><a href="#" class="menu_button friends"><img src="img/icons/friends_icon.svg" alt="friends_icon"> <p>Vrienden</p> </a></li>
-                    <li><a href="#" class="menu_button logout"><img src="img/icons/logout_icon.svg" alt="logout_icon"> <p>Logout</p> </a></li>
+                    <li><a href="#" class="menu_button_profile"><img src="img/icons/profile_icon.svg" alt="profile_icon"> <p>Profiel</p> </a></li>
+                    <li><a href="#" class="menu_button_cards"><img src="img/icons/cards_icon.svg" alt="cards_icon"> <p>Kaarten</p> </a></li>
+                    <li><a href="#" class="menu_button_trade"><img src="img/icons/trade_icon.svg" alt="trade_icon"> <p>Ruilplaza</p> </a></li>
+                    <li><a href="#" class="menu_button_progress"><img src="img/icons/progress_icon.svg" alt="progress_icon"> <p>Vooruitgang</p> </a></li>
+                    <li><a href="#" class="menu_button_friends"><img src="img/icons/friends_icon.svg" alt="friends_icon"> <p>Vrienden</p> </a></li>
+                    <li><a href="#" class="menu_button_logout"><img src="img/icons/logout_icon.svg" alt="logout_icon"> <p>Logout</p> </a></li>
                 </ul>
             </nav>
     </body>
